tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/eks/unused_security_group_existing/account-data/dev/us-east-1/autoscaling-describe-launch-configurations.json
{
    "LaunchConfigurations": [
        {
            "BlockDeviceMappings": [
                {
                    "DeviceName": "/dev/xvda",
                    "Ebs": {
                        "DeleteOnTermination": true,
                        "VolumeSize": 100,
                        "VolumeType": "gp2"
                    }
                }
            ],
            "ClassicLinkVPCSecurityGroups": [],
            "CreatedTime": "2021-06-21T14:19:47.225000+00:00",
            "EbsOptimized": true,
            "IamInstanceProfile": "my-cluster2021062114193820670000000a",
            "ImageId": "ami-0cfde6d4e50a9037b",
            "InstanceMonitoring": {
                "Enabled": true
            },
            "InstanceType": "m4.large",
            "KernelId": "",
            "KeyName": "",
            "LaunchConfigurationARN": "arn:aws:autoscaling:us-east-1:115553109071:launchConfiguration:b6d7b219-2476-4fa6-9c46-b10c9174289c:launchConfigurationName/my-cluster-02021062114194059320000000e",
            "LaunchConfigurationName": "my-cluster-02021062114194059320000000e",
            "MetadataOptions": {
                "HttpEndpoint": "enabled",
                "HttpPutResponseHopLimit": 1,
                "HttpTokens": "optional"
            },
            "RamdiskId": "",
            "SecurityGroups": [
                "sg-076113f4dbf56b7ed"
            ],
            "UserData": "IyEvYmluL2Jhc2ggLWUKCiMgQWxsb3cgdXNlciBzdXBwbGllZCBwcmUgdXNlcmRhdGEgY29kZQoKCiMgQm9vdHN0cmFwIGFuZCBqb2luIHRoZSBjbHVzdGVyCi9ldGMvZWtzL2Jvb3RzdHJhcC5zaCAtLWI2NC1jbHVzdGVyLWNhICdMUzB0TFMxQ1JVZEpUaUJEUlZKVVNVWkpRMEZVUlMwdExTMHRDazFKU1VONVJFTkRRV0pEWjBGM1NVSkJaMGxDUVVSQlRrSm5hM0ZvYTJsSE9YY3dRa0ZSYzBaQlJFRldUVkpOZDBWUldVUldVVkZFUlhkd2NtUlhTbXdLWTIwMWJHUkhWbnBOUWpSWVJGUkplRTFFV1hsTlZFVXdUVlJSTUU5R2IxaEVWRTE0VFVSWmVFOVVSVEJOVkZFd1QwWnZkMFpVUlZSTlFrVkhRVEZWUlFwQmVFMUxZVE5XYVZwWVN [...]
        }
    ]
}
