tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/eks/unused_security_group_existing/account-data/dev/us-east-1/ec2-describe-addresses.json
{
    "Addresses": [
        {
            "AllocationId": "eipalloc-006743aee166e0f70",
            "AssociationId": "eipassoc-09ff6d222209706e6",
            "Domain": "vpc",
            "NetworkBorderGroup": "us-east-1",
            "NetworkInterfaceId": "eni-0d71a2a6376e770ae",
            "NetworkInterfaceOwnerId": "115553109071",
            "PrivateIpAddress": "10.0.102.217",
            "PublicIp": "3.209.212.11",
            "PublicIpv4Pool": "amazon",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-us-east-1b"
                }
            ]
        },
        {
            "AllocationId": "eipalloc-0e188116260c6a849",
            "Domain": "vpc",
            "NetworkBorderGroup": "us-east-1",
            "PublicIp": "3.211.79.150",
            "PublicIpv4Pool": "amazon",
            "Tags": [
                {
                    "Key": "cloud-nuke-first-seen",
                    "Value": "2021-02-03 13:27:48"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-NATGW-EIP"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                }
            ]
        },
        {
            "AllocationId": "eipalloc-070914c57f6f1e1b4",
            "AssociationId": "eipassoc-0c940a75409249c96",
            "Domain": "vpc",
            "NetworkBorderGroup": "us-east-1",
            "NetworkInterfaceId": "eni-0def94a5ed3fb7cf3",
            "NetworkInterfaceOwnerId": "115553109071",
            "PrivateIpAddress": "10.0.101.224",
            "PublicIp": "3.213.215.2",
            "PublicIpv4Pool": "amazon",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-us-east-1a"
                }
            ]
        },
        {
            "AllocationId": "eipalloc-0aa74ebd8bda38f29",
            "AssociationId": "eipassoc-01263b64171866256",
            "Domain": "vpc",
            "NetworkBorderGroup": "us-east-1",
            "NetworkInterfaceId": "eni-0f52bdadb1ed94470",
            "NetworkInterfaceOwnerId": "115553109071",
            "PrivateIpAddress": "10.21.128.150",
            "PublicIp": "54.166.49.187",
            "PublicIpv4Pool": "amazon",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-NATGW-EIP"
                }
            ]
        },
        {
            "AllocationId": "eipalloc-0f67db01d8a118891",
            "Domain": "vpc",
            "NetworkBorderGroup": "us-east-1",
            "PublicIp": "54.237.147.93",
            "PublicIpv4Pool": "amazon",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "cloud-nuke-first-seen",
                    "Value": "2021-02-03 13:27:48"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-NATGW-EIP"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ]
        }
    ]
}
