tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/eks/unused_security_group_existing/account-data/dev/us-east-1/ec2-describe-nat-gateways.json
{
    "NatGateways": [
        {
            "CreateTime": "2021-02-03T13:33:16+00:00",
            "NatGatewayAddresses": [
                {
                    "AllocationId": "eipalloc-0aa74ebd8bda38f29",
                    "NetworkInterfaceId": "eni-0f52bdadb1ed94470",
                    "PrivateIp": "10.21.128.150",
                    "PublicIp": "54.166.49.187"
                }
            ],
            "NatGatewayId": "nat-0d6dceeb94081edbd",
            "State": "available",
            "SubnetId": "subnet-07b7849af809e164a",
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Private-NATGW"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "CreateTime": "2021-06-21T14:07:39+00:00",
            "NatGatewayAddresses": [
                {
                    "AllocationId": "eipalloc-070914c57f6f1e1b4",
                    "NetworkInterfaceId": "eni-0def94a5ed3fb7cf3",
                    "PrivateIp": "10.0.101.224",
                    "PublicIp": "3.213.215.2"
                }
            ],
            "NatGatewayId": "nat-02d56cb0a5526227b",
            "State": "available",
            "SubnetId": "subnet-01646b282db0e6add",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-us-east-1a"
                }
            ],
            "VpcId": "vpc-02b7f3126a5108c32"
        },
        {
            "CreateTime": "2021-06-21T14:07:39+00:00",
            "NatGatewayAddresses": [
                {
                    "AllocationId": "eipalloc-006743aee166e0f70",
                    "NetworkInterfaceId": "eni-0d71a2a6376e770ae",
                    "PrivateIp": "10.0.102.217",
                    "PublicIp": "3.209.212.11"
                }
            ],
            "NatGatewayId": "nat-074e6f093539831d9",
            "State": "available",
            "SubnetId": "subnet-0ba91749c22101798",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-us-east-1b"
                }
            ],
            "VpcId": "vpc-02b7f3126a5108c32"
        }
    ]
}
