tests/knowledge/rules/aws/ensure_no_unused_security_groups_rule/eks/unused_security_group_existing/account-data/dev/us-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-06bcffadfa5eb12fc",
                    "RouteTableId": "rtb-08f6e18da0ff00626",
                    "SubnetId": "subnet-022685ee8d3663b5c"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-08f6e18da0ff00626",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-02d56cb0a5526227b",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-private-us-east-1a"
                }
            ],
            "VpcId": "vpc-02b7f3126a5108c32"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0ee98ed64db676703",
                    "RouteTableId": "rtb-0385b358e83be1f46"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0385b358e83be1f46",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.128.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Default-RT"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-82ea5cf3",
                    "RouteTableId": "rtb-e24c0a9c"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-e24c0a9c",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "default table"
                }
            ],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0fe0c5f29ab9a49a8",
                    "RouteTableId": "rtb-06c1e58e20ad63f2d"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-06c1e58e20ad63f2d",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-02b7f3126a5108c32"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-07ddd169109769805",
                    "RouteTableId": "rtb-04f6f0e61468e405c",
                    "SubnetId": "subnet-0d4b79ce0ba1e0913"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0de19911bdf89dbc6",
                    "RouteTableId": "rtb-04f6f0e61468e405c",
                    "SubnetId": "subnet-07b7849af809e164a"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0124b3b3c32f9b14a",
                    "RouteTableId": "rtb-04f6f0e61468e405c",
                    "SubnetId": "subnet-0ac7ab4e705a7d184"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-04f6f0e61468e405c",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.128.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-06b740536f0fe8162",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0923e315fc70d887a",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Public-RT"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0d783d9f6b22ff9a0",
                    "RouteTableId": "rtb-06c665fa50bb4cb83",
                    "SubnetId": "subnet-087af17d6e6623026"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-06c665fa50bb4cb83",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-074e6f093539831d9",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-private-us-east-1b"
                }
            ],
            "VpcId": "vpc-02b7f3126a5108c32"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-04adb466304cefbee",
                    "RouteTableId": "rtb-031a97bb1cca8e105",
                    "SubnetId": "subnet-004d655196329d93a"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0dcc22c89c7a4f2ba",
                    "RouteTableId": "rtb-031a97bb1cca8e105",
                    "SubnetId": "subnet-05a12b58cb8bb928e"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0bbaa711a131c72ab",
                    "RouteTableId": "rtb-031a97bb1cca8e105",
                    "SubnetId": "subnet-04d441d9f2365b71a"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-031a97bb1cca8e105",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.21.128.0/20",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.16.0.0/16",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "TransitGatewayId": "tgw-0bb1396f4b2cc782c"
                },
                {
                    "DestinationCidrBlock": "192.168.0.0/16",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "TransitGatewayId": "tgw-0bb1396f4b2cc782c"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0d6dceeb94081edbd",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0923e315fc70d887a",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Tier",
                    "Value": "Private"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Private-RT"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-006e4af23dd7c863a",
                    "RouteTableId": "rtb-04133c8833b5a8489",
                    "SubnetId": "subnet-0ba91749c22101798"
                },
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0d20a55cf71ae680a",
                    "RouteTableId": "rtb-04133c8833b5a8489",
                    "SubnetId": "subnet-01646b282db0e6add"
                }
            ],
            "OwnerId": "115553109071",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-04133c8833b5a8489",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0148c476914ff0b38",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "test-public"
                }
            ],
            "VpcId": "vpc-02b7f3126a5108c32"
        }
    ]
}
